--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <script src="assets\javascript\game.js"></script>
+    <title>Hangman</title>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h1>Wildlife Hangman</h1>
+            </div>
+            <div class="col-12 col-md-6">
+                <button id="start">Start</button>
+            </div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <h2>Guess Here
+                <br>
+                <span id="placeholders">_____</span>
+                </h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2>Wrong Guesses
+                <br>
+                <span id="wrong-guess"></span>
+                </h2>
+            </div>
+            <div class="col-12 col-md-6">
+                <h2>Guesses Remaining
+                <br>
+                <span id="guesses-left"></span>
+                </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2>Wins
+                <br>
+                <span id="wins"></span>
+                </h2>
+            </div>
+            <div class="col-12 col-md-6">
+                <h2>Losses
+                <br>
+                <span id="losses"></span>
+                </h2>
+            </div>
+        </div>
+        <br>
+        <img src="./assets/images/rope.jpeg" alt="Hangman rope image">
+    </div>
+</body>
+</html>
